--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@ var App=typeof App==='undefined'?0:App;
 			" class="hoverer">
 			Mods/Addons
 			<div class="hoverable">
-			<a href="javascript: (function () {Game.LoadMod('https://cookiemonsterteam.github.io/CookieMonster/dist/CookieMonster.js');}());" id="linkVersionBeta">Cookie Monster</a>
-			<a href="javascript: (function () {Game.LoadMod('https://klattmose.github.io/CookieClicker/KlattmoseUtilities.js?v=2.16');}());" id="linkVersionOld">Klattmose's Utilities</a>
-			<a href="https://sushi8756.github.io/Cookie-Clicker-Guide/" target="_blank">More Addons</a>
+			<a href="javascript: Game.cookies=999999999999999999999999999999999999999999" id="linkVersionBeta">Inf. Cookies</a>
+			<a href="javascript: Game.lumps=99999999999999999999999999999999999999999999" id="linkVersionOld">Inf. Lumps</a>
 			</div>
 		</div>
 	</div>
